infra/k8s/application/04-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: gangwon
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2

  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: upstage-gangwon-backend:lite
        ports:
        - containerPort: 8880
        readinessProbe:
          httpGet:
            path: /agent/health
            port: 8880
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: gangwon
spec:
  selector:
    app: backend
  ports:
  - port: 8880
    targetPort: 8880
